removed info on project 1 and 2

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <section>
     <h2>Projects</h2>
     <ul>
-      <li><strong>Project 1:</strong> Terra One – offline AI survival device</li>
-      <li><strong>Project 2:</strong> D&D Interactive Story Builder</li>
+      <li><strong>Project 1:</strong> </li>
+      <li><strong>Project 2:</strong> </li>
     </ul>
   </section>
 
